# dagster-dbt-example

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  utils.py
dagster_example/: __init__.py
dbt_warehouse/: dbt_project.yml
dbt_warehouse/models/group_1/subgroup_1a/: pure_dbt_model_2.sql
dbt_warehouse/models/group_2/: schema.yml
dbt_warehouse/models/projects/example_2/: seed_model.sql
dbt_warehouse/tests/: failing_test.sql  passing_test.sql
tests/: test_dbt_repo.py
